# LLM-RAG-Agent-Evaluation-System

./: .gitignore  DESIGN.md  pyproject.toml
configs/: agent_deepseek_vs_kimi.yaml  agent_eval.yaml  agent_kimi.yaml  deepseek_rag.yaml  deepseek_vs_kimi.yaml  glm_only.yaml  multi_model_compare.yaml  multimodel_compare.yaml  rag_eval_example.yaml  retriever_ablation_bge.yaml  retriever_ablation_bge_reranker.yaml  retriever_ablation_minilm.yaml  three_way_compare.yaml
data/samples/: agent_tasks_50.json  corpus.json  rag_tasks_50.json
reports/: agent_baseline.md  agent_deepseek_vs_kimi.md  deepseek_vs_kimi.json  deepseek_vs_kimi.md
src/analysis/: __init__.py  breakdown.py  cluster.py  correlation.py  reporter.py  run_analysis.py
src/core/: __init__.py  interfaces.py  models.py  registry.py
src/dataset/: __init__.py  loader.py  synthetic.py
src/evaluation/: __init__.py  judge.py  scorer.py
src/evaluation/metrics/: agent.py  faithfulness.py  retrieval.py
src/inference/: __init__.py  agent.py  rag.py  reranker.py  retriever.py  tools.py
src/inference/adapters/: anthropic.py  openai.py
src/pipeline/: __init__.py  config.py  experiment.py  run.py
src/utils/: logging.py  reproducibility.py
tests/: test_dataset.py  test_evaluation.py  test_models.py
