[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-system"
version = "0.1.0"
description = "Production-grade LLM evaluation system for RAG and Agent workflows"
readme = "DESIGN.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Evaluation System Team"},
]
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.25",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
